--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,10 @@
     <title>Mingle</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=564745f058c542d6fe129acf432e4b99"
+    ></script>
   </body>
 </html>
