지도 검색 기능 구현

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <div id="root"></div>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=564745f058c542d6fe129acf432e4b99"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=564745f058c542d6fe129acf432e4b99&libraries=services"
     ></script>
   </body>
 </html>
