--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mingle</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   <h1>
-       <span>M</span><span>i</span><span>n</span><span>g</span><span>l</span><span>e</span>
-</h1> 
-   <form action="https://www.google.com/search" method="GET">
-    <div class="mx-auto mt-5 search-bar input-group mb-3">
-        <input name="q" type="text" class="form-control rounded-pill" placeholder="Mingle search 또는 URL입력" aria-label="Recipient's username" aria-describedby="button-addon2">
-    </div>
-   </form>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/mingle-clone/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/mingle-clone/logo192.png"/><link rel="manifest" href="/mingle-clone/manifest.json"/><title>Mingle</title><script defer="defer" src="/mingle-clone/static/js/main.c19463ba.js"></script><link href="/mingle-clone/static/css/main.e18beb16.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=564745f058c542d6fe129acf432e4b99&libraries=services"></script></body></html>
